fix: minor ui fixes

--- a/src/widgets/contacts/contacts-section.astro
+++ b/src/widgets/contacts/contacts-section.astro
@@ -8,7 +8,7 @@ import contacts01 from "/public/images/contacts01.webp";
 
 <section
     id="contacts"
-    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-start flex-col mx-auto mt-[64px] relative"
+    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1540px] flex items-start flex-col mx-auto mt-[64px] relative"
 >
     <h6
         id="contactsHeading"
@@ -60,7 +60,7 @@ import contacts01 from "/public/images/contacts01.webp";
         id="contactsImage"
         src={contacts01}
         alt="Wheat"
-        class="absolute lg:flex hidden mx-auto -right-72 xl:-right-80 2xl:-right-[22rem] 3xl:-right-[22rem] 5xl:-right-[26rem] 6xl:-right-[36rem] bottom-0 3xl:bottom-20 4xl:bottom-10 lg:w-[850px] lg:h-[450px] xl:w-[950px] xl:h-[500px] 2xl:w-[1000px] 2xl:h-[550px] 3xl:w-[1100px] 3xl:h-[600px] 4xl:w-[1200px] 4xl:h-[650px] 5xl:w-[1250px] 5xl:h-[670px]"
+        class="absolute lg:flex hidden mx-auto -right-72 xl:-right-80 2xl:-right-[22rem] 3xl:-right-[22rem] 4xl:-right-[28rem] 5xl:-right-[36rem] 6xl:-right-[42rem] 7xl:-right-[48rem] bottom-0 3xl:bottom-20 4xl:bottom-10 lg:w-[850px] lg:h-[450px] xl:w-[950px] xl:h-[500px] 2xl:w-[1000px] 2xl:h-[550px] 3xl:w-[1100px] 3xl:h-[600px] 4xl:w-[1200px] 4xl:h-[650px] 5xl:w-[1250px] 5xl:h-[670px]"
     />
 </section>
 
