--- a/src/widgets/portfolio/portfolio-section.astro
+++ b/src/widgets/portfolio/portfolio-section.astro
@@ -8,7 +8,7 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
 ---
 
 <section
-    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1800px] flex items-center flex-col mx-auto mt-[64px] lg:mt-[128px]"
+    class="max-w-[90%] lg:max-w-[80%] 3xl:max-w-[1560px] 4xl:max-w-[1540px] flex items-center flex-col mx-auto mt-[64px] lg:mt-[128px]"
     id="portfolio"
 >
     <div
@@ -38,7 +38,7 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-16 items-center mt-8 mb-12 last:mb-0 w-full"
     >
         {
-            portfolioCards.map((card, index) => (
+            portfolioCards.map((card) => (
                 <div class="portfolio-card opacity-0 translate-y-10">
                     <PortfolioCard {...card} client:load />
                 </div>
