--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -6,15 +6,30 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  opacity: 1;
 }
 
 ::selection {
-    background-color: #50C878; /* Change this to your desired background color */
-    color: white; /* Change this to your desired text color */
+  background-color: #50c878;
+  color: white;
 }
 
 @layer base {
   :root {
     --radius: 0.5rem;
   }
+}
+
+::-webkit-scrollbar {
+  width: 0;
+  height: 0;
+  background: transparent;
+}
+
+::-webkit-scrollbar-thumb {
+  background: transparent;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
 }
