--- a/src/shared/ui/button/button.astro
+++ b/src/shared/ui/button/button.astro
@@ -27,7 +27,7 @@ const {
       class:list={[
         width,
         height,
-        "font-mont-alter flex items-center justify-center rounded-[32px] bg-primary font-medium text-white text-[16px] sm:text-[18px]",
+        "font-mont-alter flex items-center justify-center rounded-[32px] transition-colors duration-300 ease-in-out bg-transparent border border-primary font-medium text-primary  hover:bg-primary hover:text-white",
         className,
       ]}
     >
