--- a/src/widgets/portfolio/portfolio-section.astro
+++ b/src/widgets/portfolio/portfolio-section.astro
@@ -38,16 +38,28 @@ import { portfolioCards } from "../../features/portfolio/lib/mock-data";
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-16 items-center mt-8 mb-12 last:mb-0 w-full"
     >
         {
-            portfolioCards.map((card) => (
-                <div class="portfolio-card opacity-0 translate-y-10">
-                    <PortfolioCard {...card} client:load />
+            portfolioCards.map((card, index) => (
+                <div
+                    class={`portfolio-card opacity-0 translate-y-10 
+                    ${
+                        portfolioCards.length % 2 !== 0 &&
+                        index === portfolioCards.length - 1
+                            ? "lg:col-span-2"
+                            : ""
+                    }`}
+                >
+                    <PortfolioCard {...card} client:visible />
                 </div>
             ))
         }
     </div>
 
     <div id="portfolioButton" class="opacity-0 translate-y-10 scale-90">
-        <Button text={`Смотреть все`.toUpperCase()} variant="outline" />
+        <Button
+            text={`Смотреть все`.toUpperCase()}
+            variant="link"
+            href="/portfolio"
+        />
     </div>
 </section>
 
