--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -38,7 +38,11 @@ import { services } from "../../features/services/model/services";
         {
             services.map((service, index) => (
                 <div class="service-card-mob opacity-0 translate-y-10 flex flex-col items-center mb-8 last:mb-0 w-full lg:hidden">
-                    <ServiceCardMob {...service} index={index} client:load />
+                    <ServiceCardMob
+                        {...service}
+                        index={index}
+                        client:only="react"
+                    />
                 </div>
             ))
         }
@@ -52,7 +56,11 @@ import { services } from "../../features/services/model/services";
             {
                 services.slice(0, 3).map((service, index) => (
                     <div class="service-card opacity-0 translate-y-10">
-                        <ServiceCard3d {...service} index={index} client:load />
+                        <ServiceCard3d
+                            {...service}
+                            index={index}
+                            client:only="react"
+                        />
                     </div>
                 ))
             }
@@ -65,7 +73,7 @@ import { services } from "../../features/services/model/services";
                             {...service}
                             index={index + 3}
                             className="col-span-1 w-full"
-                            client:load
+                            client:only="react"
                         />
                     </div>
                 ))
@@ -82,12 +90,16 @@ import { services } from "../../features/services/model/services";
             {
                 services.slice(0, 4).map((service, index) => (
                     <div class="service-card opacity-0 translate-y-10">
-                        <ServiceCard3d {...service} index={index} client:load />
+                        <ServiceCard3d
+                            {...service}
+                            index={index}
+                            client:only="react"
+                        />
                     </div>
                 ))
             }
         </div>
-        <BigServiceCard client:load />
+        <BigServiceCard client:only="react" />
     </div>
 </section>
 
