--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -50,7 +50,7 @@ import { HeroAnimation } from "@/features/hero/lib/animations/hero-animation";
 
 <main class="relative w-full">
   <section class="video-section">
-    <video autoplay loop muted playsinline>
+    <video autoplay loop muted playsinline preload="auto">
       <source src={BackgroundVideo} type="video/webm" />
       Ваш браузер не поддерживает видео.
     </video>
@@ -91,7 +91,7 @@ import { HeroAnimation } from "@/features/hero/lib/animations/hero-animation";
         text={"Связаться с нами".toUpperCase()}
         variant="default"
         className="mt-[64px] lg:hidden flex"
-        client:only="react"
+        client:idle
       />
     </div>
   </section>
