--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,38 +7,16 @@ import "../styles/global.css";
 <html lang="ru">
 	<head>
 		<meta charset="UTF-8" />
-		<meta property="og:image" content="/images/hero-image.webp" />
+		<meta property="og:image" content="/public/images/logo.svg" />
 		<meta property="og:url" content="https://wrapstudio.kz/" />
 		<meta name="twitter:card" content="summary_large_image" />
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content="Astro" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<link rel="preload" as="style" href="/_astro/index.CvKf8nOX.css" />
-		<link rel="stylesheet" href="/_astro/index.CvKf8nOX.css" />
-		<link rel="stylesheet" href="/_astro/index.CvKf8nOX.css?v=1.0.1" />
-		<link rel="preload" as="style" href="/_astro/index.MAFQVg0u.css" />
-		<link rel="stylesheet" href="/_astro/index.MAFQVg0u.css" />
-		<link rel="stylesheet" href="../styles/global.css" />
-		<link
-			rel="stylesheet"
-			href="../styles/fonts.css"
-			media="print"
-			onload="this.removeAttribute('media');"
-		/>
-		<link
-			rel="stylesheet"
-			href="/_astro/index.MAFQVg0u.css"
-			media="print"
-		/><link
-			rel="stylesheet"
-			href="/_astro/index.MAFQVg0u.css"
-			media="print"
-		/><meta name="generator" content={Astro.generator} /><title>
+		<meta name="generator" content={Astro.generator} /><title>
 			Wrap Studio
-		</title></head
-	>
-
-	<body class="mx-auto">
+		</title>
+	</head><body class="mx-auto">
 		<slot />
 	</body>
 </html>
