--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,15 +21,16 @@
 }
 
 ::-webkit-scrollbar {
-  width: 0;
+width: 8px;
   height: 0;
   background: transparent;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: transparent;
+  background-color: #50c878; 
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background: #080808;
 }
