--- a/src/widgets/services/services-section.astro
+++ b/src/widgets/services/services-section.astro
@@ -38,11 +38,7 @@ import { services } from "../../features/services/model/services";
         {
             services.map((service, index) => (
                 <div class="service-card-mob opacity-0 translate-y-10 flex flex-col items-center mb-8 last:mb-0 w-full lg:hidden">
-                    <ServiceCardMob
-                        {...service}
-                        index={index}
-                        client:only="react"
-                    />
+                    <ServiceCardMob {...service} index={index} client:load />
                 </div>
             ))
         }
@@ -103,7 +99,6 @@ import { services } from "../../features/services/model/services";
     </div>
 </section>
 
-<!-- GSAP-анимация -->
 <script>
     import { gsap } from "gsap";
     import { ScrollTrigger } from "gsap/ScrollTrigger";
