--- a/src/widgets/portfolio-inner/portfolio-inner.astro
+++ b/src/widgets/portfolio-inner/portfolio-inner.astro
@@ -2,8 +2,6 @@
 import Heading from "../../shared/ui/heading/heading.astro";
 import PortfolioCard from "../../features/portfolio/ui/portfolio-card/portfolio-card.tsx";
 
-import type { ImageSliderProps } from "../../features/portfolio/ui/portfolio-card/portfolio-card";
-
 const response = await fetch(
     "http://localhost:1337/api/portfolio-packages?populate=*",
 );
@@ -40,7 +38,7 @@ const formattedData = data.map((card: any) => ({
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-8 items-center mt-8 mb-12 last:mb-0 w-full"
     >
         {
-            data?.map((card: ImageSliderProps, index: number) => (
+            data?.map((index: number) => (
                 <div
                     class={`portfolio-card opacity-0 translate-y-10 
                     ${
