--- a/src/widgets/portfolio-inner/portfolio-inner.astro
+++ b/src/widgets/portfolio-inner/portfolio-inner.astro
@@ -2,6 +2,8 @@
 import Heading from "../../shared/ui/heading/heading.astro";
 import PortfolioCard from "../../features/portfolio/ui/portfolio-card/portfolio-card.tsx";
 
+import type { ImageSliderProps } from "../../features/portfolio/ui/portfolio-card/portfolio-card.tsx";
+
 const response = await fetch(
     "http://localhost:1337/api/portfolio-packages?populate=*",
 );
@@ -38,7 +40,7 @@ const formattedData = data.map((card: any) => ({
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-8 items-center mt-8 mb-12 last:mb-0 w-full"
     >
         {
-            data?.map((index: number) => (
+            data?.map((card: ImageSliderProps, index: number) => (
                 <div
                     class={`portfolio-card opacity-0 translate-y-10 
                     ${
@@ -49,8 +51,8 @@ const formattedData = data.map((card: any) => ({
                 >
                     <PortfolioCard
                         images={formattedData[index]?.images || []}
-                        title={formattedData[index]?.title}
-                        description={formattedData[index]?.description}
+                        title={card.title}
+                        description={card.description}
                         client:visible
                     />
                 </div>
