--- a/src/widgets/portfolio-inner/portfolio-inner.astro
+++ b/src/widgets/portfolio-inner/portfolio-inner.astro
@@ -2,21 +2,7 @@
 import Heading from "../../shared/ui/heading/heading.astro";
 import PortfolioCard from "../../features/portfolio/ui/portfolio-card/portfolio-card.tsx";
 
-import type { ImageSliderProps } from "../../features/portfolio/ui/portfolio-card/portfolio-card.tsx";
-
-const response = await fetch(
-    "http://localhost:1337/api/portfolio-packages?populate=*",
-);
-const json = await response.json();
-const data = json.data;
-
-const formattedData = data.map((card: any) => ({
-    ...card,
-    images:
-        card.images?.map((img: any) =>
-            img.url ? `http://localhost:1337${img.url}` : null,
-        ) || [],
-}));
+import { portfolioCards } from "../../features/portfolio/lib/mock-data";
 ---
 
 <section
@@ -40,21 +26,17 @@ const formattedData = data.map((card: any) => ({
         class="flex flex-col lg:grid lg:grid-cols-2 lg:gap-x-11 lg:gap-y-24 gap-y-8 lg:mt-8 items-center mt-8 mb-12 last:mb-0 w-full"
     >
         {
-            data?.map((card: ImageSliderProps, index: number) => (
+            portfolioCards.map((card, index) => (
                 <div
                     class={`portfolio-card opacity-0 translate-y-10 
                     ${
-                        data.length % 2 !== 0 && index === data.length - 1
+                        portfolioCards.length % 2 !== 0 &&
+                        index === portfolioCards.length - 1
                             ? "lg:col-span-2"
                             : ""
                     }`}
                 >
-                    <PortfolioCard
-                        images={formattedData[index]?.images || []}
-                        title={card.title}
-                        description={card.description}
-                        client:visible
-                    />
+                    <PortfolioCard {...card} client:only="react" />
                 </div>
             ))
         }
