--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -11,30 +11,30 @@ import "../styles/global.css";
 
 		<!-- Primary Meta Tags -->
 		<title>
-			Wrap Studio - Профессиональная оклейка автомобилей в Астане
+			Wrap Studio - Профессиональная оклейка автомобилей в Павлодаре
 		</title>
 		<meta
 			name="title"
-			content="Wrap Studio - Профессиональная оклейка автомобилей в Астане"
+			content="Wrap Studio - Профессиональная оклейка автомобилей в Павлодаре"
 		/>
 		<meta
 			name="description"
-			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Астане. Качественные материалы и опытные мастера."
+			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Павлодаре. Качественные материалы и опытные мастера."
 		/>
 		<meta
 			name="keywords"
-			content="оклейка автомобилей, защита кузова, тонировка, детейлинг, Астана, wrap studio"
+			content="оклейка автомобилей, защита кузова, тонировка, детейлинг, Павлодаре, wrap studio"
 		/>
 
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://wrapstudio.kz/" />
 		<meta
 			property="og:title"
-			content="Wrap Studio - Профессиональная оклейка автомобилей в Астане"
+			content="Wrap Studio - Профессиональная оклейка автомобилей в Павлодаре"
 		/>
 		<meta
 			property="og:description"
-			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Астане. Качественные материалы и опытные мастера."
+			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Павлодаре. Качественные материалы и опытные мастера."
 		/>
 		<meta
 			property="og:image"
@@ -45,11 +45,11 @@ import "../styles/global.css";
 		<meta name="twitter:url" content="https://wrapstudio.kz/" />
 		<meta
 			name="twitter:title"
-			content="Wrap Studio - Профессиональная оклейка автомобилей в Астане"
+			content="Wrap Studio - Профессиональная оклейка автомобилей в Павлодаре"
 		/>
 		<meta
 			name="twitter:description"
-			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Астане. Качественные материалы и опытные мастера."
+			content="Профессиональная оклейка автомобилей, защита кузова, тонировка и детейлинг в Павлодаре. Качественные материалы и опытные мастера."
 		/>
 		<meta
 			name="twitter:image"
@@ -84,20 +84,66 @@ import "../styles/global.css";
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 		<link
-			rel="preload"
-			href="/fonts/unisans.woff2"
-			as="font"
-			type="font/woff2"
+			rel="preconnect"
+			href="https://fonts.cdnfonts.com/css/walk-da-walk-one"
 			crossorigin
 		/>
 		<link
 			rel="preload"
-			href="/fonts/montserrat.woff2"
+			href="/public/fonts/Gotham Pro/gothampro_light.ttf"
 			as="font"
-			type="font/woff2"
+			type="font/ttf"
 			crossorigin
 		/>
-
+		<link
+			rel="preload"
+			href="/public/fonts/Gotham Pro/gothampro.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Gotham Pro/gothampro_medium.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Gotham Pro/gothampro_bold.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Montserrat Alternates/MontserratAlternates-ExtraLight.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Montserrat Alternates/MontserratAlternates-Light.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Montserrat Alternates/MontserratAlternates-Regular.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
+		<link
+			rel="preload"
+			href="/public/fonts/Montserrat Alternates/MontserratAlternates-Medium.ttf"
+			as="font"
+			type="font/ttf"
+			crossorigin
+		/>
 		<link rel="canonical" href="https://wrapstudio.kz/" />
 	</head>
 	<body class="mx-auto antialiased">
