--- a/src/shared/ui/paragraph/paragraph.astro
+++ b/src/shared/ui/paragraph/paragraph.astro
@@ -23,6 +23,7 @@ const {
         align,
         className,
     ]}
+    style="font-display: swap; text-rendering: optimizeSpeed; font-smooth: always;"
 >
     {text}
 </p>
