--- a/src/widgets/hero/hero-section.astro
+++ b/src/widgets/hero/hero-section.astro
@@ -91,7 +91,7 @@ import { HeroAnimation } from "@/features/hero/lib/animations/hero-animation";
         text={"Связаться с нами".toUpperCase()}
         variant="default"
         className="mt-[64px] lg:hidden flex"
-        client:only="react"
+        client:only
       />
     </div>
   </section>
